objects/Partner_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to manage the agreement process.  Dependent on Type</description>
        <inlineHelpText>Used to manage the agreement process.  Dependent on Type</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1a - App Received</fullName>
                    <default>true</default>
                    <label>1a - App Received</label>
                </value>
                <value>
                    <fullName>1b - Incomplete App</fullName>
                </value>
                <value>
                    <fullName>1c - Additional App Info</fullName>
                </value>
                <value>
                    <fullName>2a - In Review</fullName>
                </value>
                <value>
                    <fullName>2b - Evaluating</fullName>
                </value>
                <value>
                    <fullName>3a - Terms &amp; Conditions</fullName>
                </value>
                <value>
                    <fullName>3b - Pre-Product</fullName>
                </value>
                <value>
                    <fullName>3c - References</fullName>
                </value>
                <value>
                    <fullName>4a - Draft Web Page</fullName>
                </value>
                <value>
                    <fullName>4b - Web Page Customer</fullName>
                </value>
                <value>
                    <fullName>4c - Prep for Copy Edit</fullName>
                </value>
                <value>
                    <fullName>4d - At Copy Edit</fullName>
                </value>
                <value>
                    <fullName>4e - Make Live</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active - No Web Page</fullName>
                </value>
                <value>
                    <fullName>Active - Out of Compliance</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Inactive - overlap</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Denied - overlap</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>1a - Proposal Sent</fullName>
                </value>
                <value>
                    <fullName>1b - Proposal Received</fullName>
                </value>
                <value>
                    <fullName>1c - Sponsor Updating Proposal</fullName>
                </value>
                <value>
                    <fullName>1d - Proposal Re-review</fullName>
                </value>
                <value>
                    <fullName>2a - Management Approval</fullName>
                </value>
                <value>
                    <fullName>2b - P&amp;L Approval</fullName>
                </value>
                <value>
                    <fullName>3a - Legal</fullName>
                </value>
                <value>
                    <fullName>3b - Obtain Agmnt Signatures</fullName>
                </value>
                <value>
                    <fullName>4 - Place the Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Class__c</fullName>
        <description>Identifies sub class of an agreement, dependent on Class.</description>
        <inlineHelpText>Identifies sub class of an agreement, dependent on Class.</inlineHelpText>
        <label>Sub Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Managed</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>Connections</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>MathWorks</fullName>
                </value>
                <value>
                    <fullName>Mathworks and Third Party</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_C_No_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the Customer did not respond to the T&amp;C Survey</description>
        <inlineHelpText>Checked when the Customer did not respond to the T&amp;C Survey</inlineHelpText>
        <label>T&amp;C - No Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_C_Response_Date__c</fullName>
        <description>The date that survey was received back</description>
        <inlineHelpText>The date that survey was received back</inlineHelpText>
        <label>T&amp;C - Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_C_Response__c</fullName>
        <description>URL to view the T&amp;C Survey</description>
        <inlineHelpText>URL to view the T&amp;C Survey</inlineHelpText>
        <label>T&amp;C - Response</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>T_C_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box that indicates that the T&amp;C Survey should be auto sent</description>
        <inlineHelpText>When checked, an email will be sent to the Contact that will include the T&amp;C Survey link</inlineHelpText>
        <label>T&amp;C - Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_C_Sent_Date__c</fullName>
        <description>The date the T&amp;C Survey was last sent</description>
        <inlineHelpText>The date the T&amp;C Survey was last sent</inlineHelpText>
        <label>T&amp;C - Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_C_Status__c</fullName>
        <description>Track the progress of a received Status</description>
        <inlineHelpText>Track the progress of a received Status</inlineHelpText>
        <label>T&amp;C - Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <formula>&quot;ref:&quot;&amp;LEFT( $Organization.Id , 4 )&amp; 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;0000000&apos;), 
RIGHT($Organization.Id,4), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;000000&apos;), 
RIGHT($Organization.Id,5), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;00000&apos;), 
RIGHT($Organization.Id,6), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;0000&apos;), 
RIGHT($Organization.Id,7), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;000&apos;), 
RIGHT($Organization.Id,8), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;00&apos;), 
RIGHT($Organization.Id,9), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;0&apos;), 
RIGHT($Organization.Id,10), 
RIGHT($Organization.Id,11) 
) 
) 
) 
) 
) 
) 
) 
&amp;&quot;.&quot;&amp;LEFT( Id , 4 )&amp; 
IF(BEGINS(RIGHT(Id,11), &apos;0000000&apos;), RIGHT(Id,4), 
IF(BEGINS(RIGHT(Id,11), &apos;000000&apos;), RIGHT(Id,5), 
IF(BEGINS(RIGHT(Id,11), &apos;00000&apos;), RIGHT(Id,6), 
IF(BEGINS(RIGHT(Id,11), &apos;0000&apos;), RIGHT(Id,7), 
IF(BEGINS(RIGHT(Id,11), &apos;000&apos;), RIGHT(Id,8), 
IF(BEGINS(RIGHT(Id,11), &apos;00&apos;), RIGHT(Id,9), 
IF(BEGINS(RIGHT(Id,11), &apos;0&apos;), RIGHT(Id,10), 
RIGHT(Id,11) 
) 
) 
) 
) 
) 
) 
) 
&amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Discounts_Remaining__c</fullName>
        <description>Counts partner benefit records of type training discount filtered by &apos;unused&apos; checkbox&apos;</description>
        <label>Training Discounts Remaining</label>
        <summaryFilterItems>
            <field>Partner_Benefits__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Training Discount</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Partner_Benefits__c.Unused_Benefit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Partner_Benefits__c.Partner_Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Translated_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to lookup to a related agreement that is the translated version (could be English or Japanese).  One agreement will be related to one translated version only.</description>
        <inlineHelpText>Used to relate one agreement to another which represents a translated version.</inlineHelpText>
        <label>Translated Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>Translated Agreements</relationshipLabel>
        <relationshipName>Translated_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to capture the type of agreement, note that Class and Sub Class are dependent on this pick list</description>
        <inlineHelpText>Used to capture the type of agreement, note that Class and Sub Class are dependent on this pick list</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connections</fullName>
                </value>
                <value>
                    <fullName>Var/OEM</fullName>
                </value>
                <value>
                    <fullName>Restricted Use License</fullName>
                </value>
                <value>
                    <fullName>No Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Required for MW product</fullName>
                </value>
                <value>
                    <fullName>1 - Integral</fullName>
                </value>
                <value>
                    <fullName>2 - Supported by MW product</fullName>
                </value>
                <value>
                    <fullName>3 - Class is integral - major</fullName>
                </value>
                <value>
                    <fullName>4 - Gap filler</fullName>
                </value>
                <value>
                    <fullName>5 - Customer required</fullName>
                </value>
                <value>
                    <fullName>6 - Door-opener</fullName>
                </value>
                <value>
                    <fullName>7 - Class is integral - minor</fullName>
                </value>
                <value>
                    <fullName>8 - Plus one</fullName>
                </value>
                <value>
                    <fullName>9 - Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Page_URL__c</fullName>
        <description>allows user to enter the related CMS URl</description>
        <label>Web Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>days_to_active__c</fullName>
        <formula>Final_Approval_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>partner_count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>partner count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Agreement</label>
    <listViews>
        <fullName>X01_Natick_New_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>1a - App Received</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Natick Partner Agreements</value>
        </filters>
        <label>01 Natick - New Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X02_Natick_New_Emails_on_Agreements</fullName>
        <booleanFilter>4 AND 3 AND (1 OR 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E2AEmailCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Follow_Up_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>No Charge</value>
        </filters>
        <filters>
            <field>Primary_Office__c</field>
            <operation>notEqual</operation>
            <value>MathWorks Japan</value>
        </filters>
        <label>02 Natick - New Emails on Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X03_Natick_All_CNX_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Office__c</field>
            <operation>equals</operation>
            <value>MathWorks Natick</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Connections</value>
        </filters>
        <label>03 Natick - All CNX Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X04_CNX_All_In_Process_CNX_Agreements</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed,active,denied,Cancelled</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Var/OEM,Restricted Use License,No Charge</value>
        </filters>
        <label>04 All - In-Process CNX Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X05_CNX_All_In_Process_Demo_Licenses</fullName>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Restricted Use License</value>
        </filters>
        <label>05 All - In-Process Demo Licenses</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X06_CNX_All_Active_Demo_Licenses</fullName>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Name_Latin__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Restricted Use License</value>
        </filters>
        <label>06 All - Active Demo Licenses</label>
        <sharedTo>
            <roleAndSubordinates>Mathworks_Development_and_Partner_Programs</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X07_Japan_New_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Name_Latin__c</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>1a - App Received</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Japan Partner Agreements</value>
        </filters>
        <label>07 Japan - New Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X08_Japan_New_Emails_on_Agreements</fullName>
        <booleanFilter>4 AND 3 AND (1 OR 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Name_Latin__c</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E2AEmailCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Follow_Up_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>No Charge</value>
        </filters>
        <filters>
            <field>Primary_Office__c</field>
            <operation>equals</operation>
            <value>MathWorks Japan</value>
        </filters>
        <label>08 Japan - New Emails on Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X09_Japan_All_CNX_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Office__c</field>
            <operation>equals</operation>
            <value>MathWorks Japan</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Connections</value>
        </filters>
        <label>09 Japan - All CNX Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X10_No_Charge_New_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>1a - App Received</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>No Charge</value>
        </filters>
        <label>10 No Charge - New Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X11_No_Charge_New_Emails_on_Agreements</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>No Charge</value>
        </filters>
        <filters>
            <field>E2AEmailCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Follow_Up_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>11 No Charge - New Emails on Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X12_No_Charge_Open_Agreements</fullName>
        <booleanFilter>(1 AND 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Denied,Closed - No Response,Closed - Partner No Response</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>No Charge</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>12 No Charge – Open Agreements</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>surveys_sent</fullName>
        <columns>NAME</columns>
        <columns>Primary_Office__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Partner_Agreement_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <columns>T_C_Status__c</columns>
        <columns>T_C_Sent_Date__c</columns>
        <columns>T_C_Send__c</columns>
        <columns>T_C_Response_Date__c</columns>
        <columns>T_C_Response__c</columns>
        <columns>T_C_No_Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>T_C_Status__c</field>
            <operation>equals</operation>
            <value>Completed,New,Sent</value>
        </filters>
        <label>Survey sent</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Mathworks_Development_and_Partner_Programs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Partner Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>